@@ -11,6 +11,7 @@
 - Added MonospaceFont, MonospaceFontCache and FontGlyphLayout for simplified font rendering
 - Added method to show/hide ScrollBox scroll track
 - Added support for Tiled object templates
+- Added TextInputListener interface for TextBox
 - Improved Graphics performance by reducing spritebatch flushes
 - Tilesets can now be loaded from TextureAtlas instances
 - UiContainer can now have multiple navigation action keys
